# emacs-gl

./: .clang-format  .gitignore  CMakeLists.txt  README.org  conanfile.txt  emacs-module-helpers.c  emacs-module-helpers.h  generate.py  gl-module.c  gl.el  glenums.c  glenums.inc  glfuncs.c  glfuncs.h  glm.cpp  gui.cpp  texture.c
examples/: gui.el  shader.el  simple.el
inc/: glenums_1_0.inc  glenums_1_1.inc  glenums_1_2.inc  glenums_1_3.inc  glenums_1_4.inc  glenums_1_5.inc  glenums_2_0.inc  glenums_2_1.inc  glenums_3_0.inc  glenums_3_1.inc  glenums_3_2.inc  glenums_3_3.inc  glfuncs_1_0.inc  glfuncs_1_1.inc  glfuncs_1_2.inc  glfuncs_1_3.inc  glfuncs_1_4.inc  glfuncs_1_5.inc  glfuncs_2_0.inc  glfuncs_2_1.inc  glfuncs_3_0.inc  glfuncs_3_1.inc  glfuncs_3_2.inc  glfuncs_3_3.inc  glfuncs_defun_1_0.inc  glfuncs_defun_1_1.inc  glfuncs_defun_1_2.inc  glfuncs_defun_1_3.inc  glfuncs_defun_1_4.inc  glfuncs_defun_1_5.inc  glfuncs_defun_2_0.inc  glfuncs_defun_2_1.inc  glfuncs_defun_3_0.inc  glfuncs_defun_3_1.inc  glfuncs_defun_3_2.inc  glfuncs_defun_3_3.inc
